# NewDeconvolution

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/api/: gibbscellprism.md
newdeconv/: __init__.py  _dispatch.py  _logging.py  utils.py  validation.py
newdeconv/_impl/: bayes_dense_cpu.py  core.py  insta_dense_cpu.py  insta_sparse_cpu.py
newdeconv/impl/: __init__.py  bayes_dense_cpu.py  core.py  insta_dense_cpu.py  insta_sparse_cpu.py  insta_sparse_gpu.py
tests/: benchmark_instaprism.py  test_impl_cpu.py  test_impl_gpu.py  test_instaprism.py
